design improvements and translations

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,1 +1,13 @@
-{ "header": "Welcome to my home page", "subheader": "Nice looking beef" }
+{
+  "header": "Welcome to my home page",
+  "subheader": "Nice looking beef",
+  "turbie1": "La Turbie is a veritable balcony suspended above the sea and promises unforgettable walks.",
+  "turbie2": "The village and its surroundings offer many of the most beautiful panoramas on the Côte d'Azur, as well as many hikes.",
+  "turbie3": "Villa Palmire is located in the heart of the village of La Turbie, a two-minute walk away from a sports complex and a public swimming pool open during the summer.",
+  "monaco1": "A famous principality ruled by Prince Albert II, Monaco is known for its luxury restaurants and chic shops.",
+  "monaco2": "Monaco remains a unique and unmissable place on the Côte d'Azur, only a 15 minutes drive from Villa Palmire.",
+  "rooms": "Rooms",
+  "events": "Events",
+  "region": "Region",
+  "maindesc": "Located in the town of La Turbie, Villa Palmire welcomes you in a setting of greenery and tranquility, just 8 km from the Principality of Monaco."
+}
