--- a/locales/it/home.json
+++ b/locales/it/home.json
@@ -1,4 +1,13 @@
 {
-  "header": "Bienvenutooo",
-  "subheader": "spageti"
+  "header": "Benvenuti sul mio sito",
+  "subheader": "Il manzo è piuttosto buono qui",
+  "turbie1": "La Turbie è un vero e proprio balcone sospeso sopra il mare e promette passeggiate indimenticabili.",
+  "turbie2": "Il villaggio e i suoi dintorni offrono molteplici panorami tra i più belli della Costa Azzurra, oltre a numerose escursioni.",
+  "turbie3": "La Villa Palmire si trova nel cuore del villaggio di La Turbie, a due passi da un complesso sportivo e da una piscina pubblica aperta d'estate.",
+  "monaco1": "Famoso principato governato dal Principe Alberto II, Monaco è noto per i suoi ristoranti di lusso e i suoi negozi chic.",
+  "monaco2": "Monaco rimane un luogo unico e imperdibile della Costa Azzurra, ssituato a soli 15 minuti di auto da Villa Palmire.",
+  "rooms": "Camere",
+  "events": "Eventi",
+  "region": "Regione",
+  "maindesc": "Situata nella città di La Turbie, la Villa Palmire vi accoglie in un ambiente di verde e tranquillità, a soli 8 km dal Principato di Monaco."
 }
