--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -1,4 +1,13 @@
 {
-  "header": "privet",
-  "subheader": "nunununu"
+  "header": "Добро пожаловать на мой сайт",
+  "subheader": "Говядина здесь довольно неплохая",
+  "turbie1": "Ла Турби - это настоящий балкон, висящий над морем, обещающий незабываемые прогулки.",
+  "turbie2": "Деревня и ее окрестности предлагают множество панорам, среди самых красивых на Лазурном Берегу, а также множество пешеходных маршрутов.",
+  "turbie3": "Вилла Пальмир расположена в самом сердце деревни Ла Турби, в нескольких шагах от спортивного комплекса и общественного бассейна, открытого летом.",
+  "monaco1": "Знаменитое княжество, управляемое принцем Альбером II, Монако известно своими роскошными ресторанами и шикарными магазинами.",
+  "monaco2": "Монако остается уникальным и незабываемым местом на Французской Ривьере, расположенным всего в 15 минутах езды на машине от Виллы Пальмире.",
+  "rooms": "Комнаты",
+  "events": "Мероприятия",
+  "region": "Регион",
+  "maindesc": "Расположенная в городе Ла Турби, Вилла Пальмире приветствует вас в окружении зелени и спокойствия, всего в 8 км от Княжества Монако."
 }
