--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -1,4 +1,13 @@
 {
   "header": "Bienvenue sur mon site",
-  "subheader": "Le boeuf est plutôt pas mal là"
+  "subheader": "Le boeuf est plutôt pas mal là",
+  "turbie1": "La turbie est un véritable balcon suspendu au-desssus de la mer et promet d'inoubliables promenades.",
+  "turbie2": "Le village et ses alentours offrent de multiples panoramas parmi les plus beaux de la Côte d'Azur, ainsi que de nombreuses randonnées.",
+  "turbie3": "La Villa Palmire se situe au coeur du village de La Turbie, à deux pas d'un complexe sportif et d'une piscine publique ouverte l'été.",
+  "monaco1": "Célèbre principauté gouverner par le Prince Albert II, Monaco est connue pour ses restaurants de luxe et ses magasins chics.",
+  "monaco2": " Monaco reste un endroit unique et incontournable sur la Côte d'Azur, situé à seulement 15 minutes en voiture de la Villa Palmire.",
+  "rooms": "Chambres",
+  "events": "Événements",
+  "region": "Région",
+  "maindesc": "Située dans la ville de La Turbie, la Villa Palmire vous accueille dans un cadre de verdure et de tranquillité, à seulement 8 km de la Principauté de Monaco."
 }
