--- a/locales/it/home.json
+++ b/locales/it/home.json
@@ -6,8 +6,17 @@
   "turbie3": "La Villa Palmire si trova nel cuore del villaggio di La Turbie, a due passi da un complesso sportivo e da una piscina pubblica aperta d'estate.",
   "monaco1": "Famoso principato governato dal Principe Alberto II, Monaco è noto per i suoi ristoranti di lusso e i suoi negozi chic.",
   "monaco2": "Monaco rimane un luogo unico e imperdibile della Costa Azzurra, ssituato a soli 15 minuti di auto da Villa Palmire.",
+  "riviera1": "Poche destinazioni riuniscono paesi e paesi diventati leggendari in tutto il mondo in così breve distanza.",
+  "riviera2": "Nizza, Cannes, Antibes, Grasse, Saint-Tropez, Monaco o anche Mentone e tante altre, compongono tra mare e montagna il carattere unico della Costa Azzurra: un connubio armonioso di cultura, arte, piaceri festivi in ​​un contesto eccezionale ambiente naturale.",
   "rooms": "Camere",
   "events": "Eventi",
   "region": "Regione",
-  "maindesc": "Situata nella città di La Turbie, la Villa Palmire vi accoglie in un ambiente di verde e tranquillità, a soli 8 km dal Principato di Monaco."
+  "maindesc": "Situata nella città di La Turbie, la Villa Palmire vi accoglie in un ambiente di verde e tranquillità, a soli 8 km dal Principato di Monaco.",
+  "book": "Prenota",
+  "created1": "Creato da",
+  "contact": "Contattaci",
+  "name": "Nome",
+  "email": "Email",
+  "message": "Messaggio",
+  "sendmessage": "Invia"
 }
