--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -6,8 +6,17 @@
   "turbie3": "Вилла Пальмир расположена в самом сердце деревни Ла Турби, в нескольких шагах от спортивного комплекса и общественного бассейна, открытого летом.",
   "monaco1": "Знаменитое княжество, управляемое принцем Альбером II, Монако известно своими роскошными ресторанами и шикарными магазинами.",
   "monaco2": "Монако остается уникальным и незабываемым местом на Французской Ривьере, расположенным всего в 15 минутах езды на машине от Виллы Пальмире.",
+  "riviera1": "Немногие направления объединяют города и деревни, ставшие легендарными во всем мире, на таком небольшом расстоянии.",
+  "riviera2": "Ницца, Канны, Антиб, Грасс, Сен-Тропе, Монако или даже Ментон и многие другие города составляют между морем и горами уникальный характер Лазурного Берега: гармоничное сочетание культуры, искусства, праздничных удовольствий в исключительном природное окружение.",
   "rooms": "Комнаты",
   "events": "Мероприятия",
   "region": "Регион",
-  "maindesc": "Расположенная в городе Ла Турби, Вилла Пальмире приветствует вас в окружении зелени и спокойствия, всего в 8 км от Княжества Монако."
+  "maindesc": "Расположенная в городе Ла Турби, Вилла Пальмире приветствует вас в окружении зелени и спокойствия, всего в 8 км от Княжества Монако.",
+  "book": "Забронировать",
+  "created1": "Создано",
+  "contact": "Свяжитесь с нами",
+  "name": "Имя",
+  "email": "Электронная почта",
+  "message": "Сообщение",
+  "sendmessage": "Отправить"
 }
