--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -16,7 +16,7 @@
   "created1": "Создано",
   "contact": "Свяжитесь с нами",
   "name": "Имя",
-  "email": "Электронная почта",
+  "email": "Почта",
   "message": "Сообщение",
   "sendmessage": "Отправить"
 }
