--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -9,7 +9,16 @@
   "riviera1": "Немногие направления объединяют города и деревни, ставшие легендарными во всем мире, на таком небольшом расстоянии.",
   "riviera2": "Ницца, Канны, Антиб, Грасс, Сен-Тропе, Монако или даже Ментон и многие другие города составляют между морем и горами уникальный характер Лазурного Берега: гармоничное сочетание культуры, искусства, праздничных удовольствий в исключительном природное окружение.",
   "rooms": "Комнаты",
-  "events": "Мероприятия",
+  "events": "События",
+  "breakfast": "Завтрак",
+  "taxi": "Такси",
+  "dogs": "Собаки",
+  "eventsdesc": "Вилла Пальмире может быть забронирована для частных мероприятий, ужинов, дней рождения и другого.",
+  "breakfastdesc": "Наш ежедневный завтрак включает выпечку, апельсиновый сок, кофе и чай.",
+  "breakfastdescmini": "Доступны варианты без глютена и для веганов",
+  "chauffeurdesc": "Мы предлагаем такси между Ла Турби и Монако.",
+  "chauffeurdescmini": "Возможны индивидуальные направления по запросу",
+  "dogsdesc": "Вилла Пальмире дружелюбна к собакам.",
   "region": "Регион",
   "maindesc": "Расположенная в городе Ла Турби, Вилла Пальмире приветствует вас в окружении зелени и спокойствия, всего в 8 км от Княжества Монако.",
   "book": "Забронировать",
@@ -18,5 +27,6 @@
   "name": "Имя",
   "email": "Почта",
   "message": "Сообщение",
-  "sendmessage": "Отправить"
+  "sendmessage": "Отправить",
+  "messagetoast": "Сообщение успешно отправлено"
 }
