--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -24,6 +24,7 @@
   "book": "Book",
   "created1": "Created by",
   "contact": "Contact us",
+  "contactmenu": "Contact",
   "name": "Name",
   "email": "Email",
   "message": "Message",
