--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -24,6 +24,7 @@
   "book": "Réservez",
   "created1": "Créer par",
   "contact": "Contactez-nous",
+  "contactmenu": "Contact",
   "name": "Nom",
   "email": "Email",
   "message": "Message",
