--- a/locales/it/home.json
+++ b/locales/it/home.json
@@ -24,6 +24,7 @@
   "book": "Prenota",
   "created1": "Creato da",
   "contact": "Contattaci",
+  "contactmenu": "Contatto",
   "name": "Nome",
   "email": "Email",
   "message": "Messaggio",
