--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -24,6 +24,7 @@
   "book": "Забронировать",
   "created1": "Создано",
   "contact": "Свяжитесь с нами",
+  "contactmenu": "Контакт",
   "name": "Имя",
   "email": "Почта",
   "message": "Сообщение",
