--- a/locales/it/home.json
+++ b/locales/it/home.json
@@ -2,12 +2,12 @@
   "header": "Benvenuti sul mio sito",
   "subheader": "Il manzo è piuttosto buono qui",
   "turbie1": "La Turbie è un vero e proprio balcone sospeso sopra il mare e promette passeggiate indimenticabili.",
-  "turbie2": "Il villaggio e i suoi dintorni offrono molteplici panorami tra i più belli della Costa Azzurra, oltre a numerose escursioni.",
+  "turbie2": "La Turbie e i suoi dintorni offrono molteplici panorami tra i più belli della Costa Azzurra, oltre a numerose escursioni.",
   "turbie3": "La Villa Palmire si trova nel cuore del villaggio di La Turbie, a due passi da un complesso sportivo e da una piscina pubblica aperta d'estate.",
   "monaco1": "Famoso principato governato dal Principe Alberto II, Monaco è noto per i suoi ristoranti di lusso e i suoi negozi chic.",
   "monaco2": "Monaco rimane un luogo unico e imperdibile della Costa Azzurra, ssituato a soli 15 minuti di auto da Villa Palmire.",
   "riviera1": "Poche destinazioni riuniscono paesi e paesi diventati leggendari in tutto il mondo in così breve distanza.",
-  "riviera2": "Nizza, Cannes, Antibes, Grasse, Saint-Tropez, Monaco o anche Mentone e tante altre, compongono tra mare e montagna il carattere unico della Costa Azzurra: un connubio armonioso di cultura, arte, piaceri festivi in ​​un contesto eccezionale ambiente naturale.",
+  "riviera2": "Tra mare e montagne, vivi il carattere unico della Costa Azzurra: un armonioso mix di cultura, arte e piaceri festivi in un contesto naturale eccezionale.",
   "rooms": "Camere",
   "events": "Eventi",
   "breakfast": "Colazione",
