--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -2,12 +2,12 @@
   "header": "Добро пожаловать на мой сайт",
   "subheader": "Говядина здесь довольно неплохая",
   "turbie1": "Ла Турби - это настоящий балкон, висящий над морем, обещающий незабываемые прогулки.",
-  "turbie2": "Деревня и ее окрестности предлагают множество панорам, среди самых красивых на Лазурном Берегу, а также множество пешеходных маршрутов.",
+  "turbie2": "Ла Турби и ее окрестности предлагают множество панорам, среди самых красивых на Лазурном Берегу, а также множество пешеходных маршрутов.",
   "turbie3": "Вилла Пальмир расположена в самом сердце деревни Ла Турби, в нескольких шагах от спортивного комплекса и общественного бассейна, открытого летом.",
   "monaco1": "Знаменитое княжество, управляемое принцем Альбером II, Монако известно своими роскошными ресторанами и шикарными магазинами.",
   "monaco2": "Монако остается уникальным и незабываемым местом на Французской Ривьере, расположенным всего в 15 минутах езды на машине от Виллы Пальмире.",
   "riviera1": "Немногие направления объединяют города и деревни, ставшие легендарными во всем мире, на таком небольшом расстоянии.",
-  "riviera2": "Ницца, Канны, Антиб, Грасс, Сен-Тропе, Монако или даже Ментон и многие другие города составляют между морем и горами уникальный характер Лазурного Берега: гармоничное сочетание культуры, искусства, праздничных удовольствий в исключительном природное окружение.",
+  "riviera2": "Между морем и горами, испытайте уникальный характер Лазурного Берега: гармоничное сочетание культуры, искусства и праздничных удовольствий в исключительной природной обстановке.",
   "rooms": "Комнаты",
   "events": "События",
   "breakfast": "Завтрак",
