--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -2,12 +2,12 @@
   "header": "Welcome to my home page",
   "subheader": "Nice looking beef",
   "turbie1": "La Turbie is a veritable balcony suspended above the sea and promises unforgettable walks.",
-  "turbie2": "The village and its surroundings offer many of the most beautiful panoramas on the Côte d'Azur, as well as many hikes.",
+  "turbie2": "La Turbie and its surroundings offer many of the most beautiful panoramas on the Côte d'Azur, as well as many hikes.",
   "turbie3": "Villa Palmire is located in the heart of the village of La Turbie, a two-minute walk away from a sports complex and a public swimming pool open during the summer.",
   "monaco1": "A famous principality ruled by Prince Albert II, Monaco is known for its luxury restaurants and chic shops.",
   "monaco2": "Monaco remains a unique and unmissable place on the Côte d'Azur, only a 15 minutes drive from Villa Palmire.",
   "riviera1": "Few destinations bring together towns and villages that have become legendary all over the world in such a short distance.",
-  "riviera2": " Nice, Cannes, Antibes, Grasse, Saint-Tropez, Monaco or even Menton and so many others, make up between sea and mountains the unique character of the Côte d'Azur: a harmonious blend of culture, art, festive pleasures in an exceptional natural setting.",
+  "riviera2": "Between sea and mountains, experience the unique character of the Côte d'Azur: a harmonious blend of culture, art, festive pleasures in an exceptional natural setting.",
   "rooms": "Rooms",
   "events": "Events",
   "breakfast": "Breakfast",
