--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -22,7 +22,7 @@
   "region": "Région",
   "maindesc": "Située dans la ville de La Turbie, la Villa Palmire vous accueille dans un cadre de verdure et de tranquillité, à seulement 8 km de la Principauté de Monaco.",
   "book": "Réservez",
-  "created1": "Créer par",
+  "created1": "Crée par",
   "contact": "Contactez-nous",
   "contactmenu": "Contact",
   "name": "Nom",
